FIX: hide footer to see if it cause horizontal overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -549,7 +549,7 @@ aside {
 }
 
 footer {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
